# flyplotlib

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: add_fly.ipynb  leg.ipynb
flyplotlib/: __init__.py  core.py
flyplotlib/tests/: test_core.py
src/flyplotlib/: __init__.py  core.py  leg.py
src/flyplotlib/tests/: __init__.py  test_core.py
