[project]
name = "flyplotlib"
version = "0.4.0"
description = "Add flies to matplotlib plots."
readme = "README.md"
authors = [
    { name = "tkclam", email = "thomas.lam@epfl.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3",
    "numpy>=2",
    "svgpath2mpl>=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
]
