[project]
name = "flyplotlib"
version = "0.5.0"
description = "Add flies to matplotlib plots."
readme = "README.md"
authors = [
    { name = "tkclam", email = "thomas.lam@epfl.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "distinctipy>=1.3.4",
    "matplotlib>=3",
    "numpy>=2",
    "pandas>=2",
    "svgpath2mpl>=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
]
